--- a/index.html
+++ b/index.html
@@ -13,24 +13,77 @@
 
 <div class="alex-div">
  
-<svg class="svg-alex" width="61" height="93.46268463134766"><use xlink:href="styles/sprite.svg#plant-1" /></svg>
+<svg class="svg-alex" width="61" height="93.46268463134766"><use xlink:href="styles/sprite.svg#plant-4" /></svg>
 
 <h1 class="alex-h1">Garden Care</h1>   
 <p class="alex-p"> We are an online plant shop offering a wide range of cheap and trendy plants.</p>
 </div>
 
-<div>
+<div class="alex-div">
 
 <svg class="svg-alex" width="60" height="93.46268463134766"><use xlink:href="styles/sprite.svg#plant-2" /></svg>
-
+<h1 class="alex-h1">Plant Renovation</h1>   
+<p class="alex-p"> We are an online plant shop offering a wide range of cheap and trendy plants.</p>
 </div>
 
-<div></div>
+<div class="alex-div">
+  <svg class="svg-alex" width="90" height="92.46268463134766"><use xlink:href="styles/sprite.svg#plant-3" /></svg>  
+  <h1 class="alex-h1">Watering Graden</h1>   
+  <p class="alex-p"> We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+</div>
 
-<div></div>
+<div class="alex-section">
+ <h1 class="alex-sp">Would you like to join newsletters?</h1>
+ <input class="input-alex" type="text" placeholder="enter your email address...">
+ <button class="alex-btn">Join</button>
+ <p class="alex-pp">We usually post offers and challenges in newsletter. We’re your online houseplant destination. We offer a wide range of houseplants and accessories shipped directly from our (green)house to yours! </p>
+</div>
 
 </section>
 
+<section class="alex-main">
+
+ <div class="alex-logo"> 
+ <svg  width="34" height="34" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M17.15 0C7.67748 0 0 7.67746 0 17.15C0 26.0201 6.73548 33.3175 15.3711 34.207C14.8496 29.9134 15.0436 26.4001 15.7067 23.5135C15.3347 21.7225 14.4898 19.0703 12.5734 17.1864C12.5734 17.1864 13.8348 19.0784 14.5181 21.6214C14.5181 21.6255 14.5221 21.6295 14.5221 21.6335C14.5949 21.9044 14.6596 22.1793 14.7162 22.4623C14.7283 22.527 14.7404 22.5917 14.7526 22.6604C14.8051 22.9515 14.8536 23.2426 14.886 23.5418C5.19513 22.3532 3.12921 13.6569 3.35561 10.3781C13.665 10.9482 15.7754 17.8292 16.0827 22.0985C19.4585 11.0412 30.1843 10.4024 31.0697 10.3781C31.4538 18.8763 25.1509 25.5026 17.6149 26.0807C17.6635 25.8503 17.7201 25.6198 17.7767 25.3934C17.7928 25.3247 17.813 25.26 17.8333 25.1913C17.8777 25.0296 17.9222 24.8679 17.9748 24.7061C17.995 24.6374 18.0192 24.5646 18.0394 24.4959C18.096 24.318 18.1567 24.1442 18.2173 23.9663C18.2335 23.9259 18.2456 23.8854 18.2618 23.845C18.3386 23.6348 18.4195 23.4326 18.5003 23.2305C18.5084 23.2143 18.5125 23.1941 18.5205 23.1779C18.5205 23.1779 18.5205 23.1779 18.5246 23.1779C20.4571 18.5043 24.0229 15.4439 24.0229 15.4439C17.0247 19.4868 15.8441 29.9983 15.6582 34.2231C16.1514 34.2676 16.6446 34.2999 17.15 34.2999C26.6225 34.2999 34.3 26.6225 34.3 17.15C34.3 7.67746 26.6225 0 17.15 0Z" fill="#46A358"/>
+</svg>
+   
+<h1 class="alex-shop">greenshop</h1>
+</div>  
+
+<div class="alex-logo">
+<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M12.0918 8.92542C12.0918 7.77436 11.1591 6.84166 10.0081 6.84166C8.85787 6.84166 7.92517 7.77436 7.92517 8.92542C7.92517 10.0756 8.85787 11.0083 10.0081 11.0083C11.1591 11.0083 12.0918 10.0756 12.0918 8.92542Z" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M9.99959 17.5C7.58457 17.5 3.75 13.2989 3.75 8.8322C3.75 5.33539 6.54758 2.5 9.99959 2.5C13.4516 2.5 16.25 5.33539 16.25 8.8322C16.25 13.2989 12.4154 17.5 9.99959 17.5Z" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+
+<p class="alex-p-text">70 West Buckingham Ave. Farmingdale, NY 11735</p>
+</div>
+
+<div class="alex-logo">
+<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M13.6208 6.51582C13.6208 6.51582 10.9457 9.72635 8.98917 9.72635C7.03345 9.72635 4.32835 6.51582 4.32835 6.51582" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M1.0434 8.97397C1.0434 3.27556 3.02752 1.37665 8.9799 1.37665C14.9323 1.37665 16.9164 3.27556 16.9164 8.97397C16.9164 14.6716 14.9323 16.5713 8.9799 16.5713C3.02752 16.5713 1.0434 14.6716 1.0434 8.97397Z" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+
+<address class="alex-p-text">contact@greenshop.com</address>
+</div>
+
+
+<div class="alex-logo">
+<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M11.9604 2.29175C15.0446 2.63425 17.4813 5.06758 17.8279 8.15175" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M11.9604 5.24425C13.4363 5.53091 14.5896 6.68508 14.8771 8.16091" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M6.41709 13.5825C0.668773 7.83352 1.48617 5.20096 2.09214 4.35263C2.16999 4.21552 4.08875 1.34323 6.14551 3.02839C11.2507 7.23288 4.78761 6.63843 9.07452 10.9261C13.3623 15.2128 12.767 8.74996 16.9716 13.8541C18.6568 15.9117 15.7844 17.8303 15.6482 17.9073C14.7998 18.5141 12.1663 19.3315 6.41709 13.5825Z" stroke="#46A358" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+
+<a class="alex-p-text" href="tel:+">+88 01911 717 490</a>
+</div>
+
+</section>
 
    
 
