--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 <div class="alex-div">
 
-<svg class="svg-alex" width="60" height="93.46268463134766"><use xlink:href="styles/sprite.svg#plant-2" /></svg>
+<svg class="svg-alex" width="61" height="93.46268463134766"><use xlink:href="styles/sprite.svg#plant-4" />
+
+</svg>
 <h1 class="alex-h1">Plant Renovation</h1>   
 <p class="alex-p"> We are an online plant shop offering a wide range of cheap and trendy plants.</p>
 </div>
